--- a/src/App.css
+++ b/src/App.css
@@ -5,15 +5,21 @@
 }
 
 body {
-  background-color: rgb(55, 49, 49);
+  background-color: rgb(22, 22, 22);
   color: white;
 }
 
-.calcMain {
+.calc-main {
   position: relative;
   background-color: rgba(255, 255, 255, 0.05);
   z-index: 10;
   overflow: hidden;
   width: 400px;
   border-radius: 16px;
+  backdrop-filter: blur(15px);
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.button-row {
+  display: flex;
 }
