--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,8 @@ body {
   border-radius: 16px;
   backdrop-filter: blur(15px);
   border-top: 1px solid rgba(255, 255, 255, 0.2);
+  border-left: 1px solid rgba(255, 255, 255, 0.2);
+  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
 }
 
 .button-row {
