--- a/src/components/Buttons.css
+++ b/src/components/Buttons.css
@@ -4,6 +4,7 @@
     align-items: center;
     height: 4em;
     font-size: 20px;
+    border: 0.5px solid rgb(61, 61, 61);
     color: white;
     flex: 1;
 }
