--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  padding-top: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,7 +15,7 @@ body {
   background-color: rgba(255, 255, 255, 0.05);
   z-index: 10;
   overflow: hidden;
-  width: 400px;
+  width: 300px;
   border-radius: 16px;
   backdrop-filter: blur(15px);
   border-top: 1px solid rgba(255, 255, 255, 0.2);
