--- a/src/components/Display.css
+++ b/src/components/Display.css
@@ -1,5 +1,6 @@
 .display-main {
-    background-color: rgb(51, 51, 51);
+    /* background-color: rgb(51, 51, 51); */
+    background: transparent;
     height: 10em;
     display: flex;
     padding: 10px;
